[project]
name = "q-a-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
